--- a/scss/base/_page.scss
+++ b/scss/base/_page.scss
@@ -30,7 +30,8 @@ h6 {
 }
 
 .page-section {
-  padding: 50px 0;
+  padding: 100px 0;
+  overflow: hidden;
   h2.section-heading {
     font-size: 40px;
     margin-top: 0;
@@ -47,7 +48,7 @@ h6 {
 }
 @media(min-width:768px) {
   section {
-    padding: 50px 0;
+    padding: 150px 0;
   }
 }
 
